--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,7 @@
             "request": "launch",
             "name": "PIO Debug",
             "executable": "/media/antoine/data/PlatformIO/Projects/Pico-brasserie-Wemos/.pio/build/d1_mini/firmware.elf",
+            "projectEnvName": "d1_mini",
             "toolchainBinDir": "/home/antoine/.platformio/packages/toolchain-xtensa/bin",
             "preLaunchTask": {
                 "type": "PlatformIO",
@@ -25,6 +26,7 @@
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
             "executable": "/media/antoine/data/PlatformIO/Projects/Pico-brasserie-Wemos/.pio/build/d1_mini/firmware.elf",
+            "projectEnvName": "d1_mini",
             "toolchainBinDir": "/home/antoine/.platformio/packages/toolchain-xtensa/bin",
             "internalConsoleOptions": "openOnSessionStart"
         }
