--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,6 @@
 platform = espressif8266
 board = d1_mini
 framework = arduino
+monitor_speed = 115200
+;upload_protocol = espota
+;upload_port = 192.168.1.22
